--- a/index.html
+++ b/index.html
@@ -20,22 +20,6 @@
 	integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
 	crossorigin="anonymous"></script>
 
-<!-- Favicons -->
-<link rel="apple-touch-icon"
-	href="/docs/4.4/assets/img/favicons/apple-touch-icon.png"
-	sizes="180x180">
-<link rel="icon" href="/docs/4.4/assets/img/favicons/favicon-32x32.png"
-	sizes="32x32" type="image/png">
-<link rel="icon" href="/docs/4.4/assets/img/favicons/favicon-16x16.png"
-	sizes="16x16" type="image/png">
-<link rel="manifest" href="/docs/4.4/assets/img/favicons/manifest.json">
-<link rel="mask-icon"
-	href="/docs/4.4/assets/img/favicons/safari-pinned-tab.svg"
-	color="#563d7c">
-<link rel="icon" href="/docs/4.4/assets/img/favicons/favicon.ico">
-<meta name="msapplication-config"
-	content="/docs/4.4/assets/img/favicons/browserconfig.xml">
-<meta name="theme-color" content="#563d7c">
 
 
 <style>
@@ -72,23 +56,23 @@
 					<br />
 
 					<p>
-						<img src="./icons/Calendar.svg" alt="" width="20" height="20"
+						<img src="./icons/calendar.svg" alt="" width="20" height="20"
 							title="Calendar" /> 1990.05.15
 					</p>
 					<p>
-						<img src="./icons/Phone.svg" alt="" width="20" height="20"
+						<img src="./icons/phone.svg" alt="" width="20" height="20"
 							title="Phone" /> 010-4449-1116
 					</p>
 					<p>
-						<img src="./icons/Envelope.svg" alt="" width="20" height="20"
+						<img src="./icons/envelope.svg" alt="" width="20" height="20"
 							title="Envelope" /> pcx@kakao.com
 					</p>
 					<p>
-						<img src="./icons/House.svg" alt="" width="20" height="20"
+						<img src="./icons/house.svg" alt="" width="20" height="20"
 							title="House" /> 서울, 나주
 					</p>
 					<p>
-						<img src="./icons/Upload.svg" alt="" width="20" height="20"
+						<img src="./icons/upload.svg" alt="" width="20" height="20"
 							title="Upload" /> <a href="https://github.com/kimmari10">github.com/kimmari10</a>
 					</p>
 
