--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-auto">
-					<img src="./logo.jpg"/>
+					<img class="img-fluid" src="./logo.jpg"/>
 				</div>
 				<div class="col-md-auto">
 					<h1 class="display-3">김 종성</h1>
