--- a/index.html
+++ b/index.html
@@ -160,9 +160,24 @@
 						<td><span class="badge badge-pill badge-success">Good</span></td>
 					</tr>
 					<tr>
+						<th scope="row">FrameWork</th>
+						<td>Spring Boot</td>
+						<td><span class="badge badge-pill badge-warning">Normal</span></td>
+					</tr>
+					<tr>
 						<th scope="row"></th>
-						<td>EgovF/W</td>
+						<td>Egov F/W</td>
 						<td><span class="badge badge-pill badge-success">Good</span></td>
+					</tr>
+					<tr>
+						<th scope="row"></th>
+						<td>DevOn F/W</td>
+						<td><span class="badge badge-pill badge-success">Good</span></td>
+					</tr>
+					<tr>
+						<th scope="row"></th>
+						<td>AnyFrame F/W</td>
+						<td><span class="badge badge-pill badge-warning">Normal</span></td>
 					</tr>
 					<!-- UI -->
 					<tr>
