--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 						<td><span class="badge badge-pill badge-success">Good</span></td>
 					</tr>
 					<tr>
-						<th scope="row">FrameWork</th>
+						<th scope="row"></th>
 						<td>Spring Boot</td>
 						<td><span class="badge badge-pill badge-warning">Normal</span></td>
 					</tr>
