--- a/index.html
+++ b/index.html
@@ -166,17 +166,17 @@
 					</tr>
 					<tr>
 						<th scope="row"></th>
-						<td>Egov F/W</td>
+						<td>Egov</td>
 						<td><span class="badge badge-pill badge-success">Good</span></td>
 					</tr>
 					<tr>
 						<th scope="row"></th>
-						<td>DevOn F/W</td>
+						<td>DevOn</td>
 						<td><span class="badge badge-pill badge-success">Good</span></td>
 					</tr>
 					<tr>
 						<th scope="row"></th>
-						<td>AnyFrame F/W</td>
+						<td>AnyFrame</td>
 						<td><span class="badge badge-pill badge-warning">Normal</span></td>
 					</tr>
 					<!-- UI -->
