--- a/index.html
+++ b/index.html
@@ -200,6 +200,16 @@
 						<td>eXbuilder6</td>
 						<td><span class="badge badge-pill badge-success">Good</span></td>
 					</tr>
+					<tr>
+						<th scope="row">DevOps</th>
+						<td>devTools</td>
+						<td><span class="badge badge-pill badge-success">Good</span></td>
+					</tr>
+					<tr>
+						<th scope="row"></th>
+						<td>docker</td>
+						<td><span class="badge badge-pill badge-warning">Normal</span></td>
+					</tr>
 				</tbody>
 			</table>
 		</div>
