--- a/index.html
+++ b/index.html
@@ -192,6 +192,11 @@
 					</tr>
 					<tr>
 						<th scope="row"></th>
+						<td>Mustache</td>
+						<td><span class="badge badge-pill badge-success">Good</span></td>
+					</tr>
+					<tr>
+						<th scope="row"></th>
 						<td>Xplatform</td>
 						<td><span class="badge badge-pill badge-success">Good</span></td>
 					</tr>
