--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
 }
 </style>
 </head>
-
+<input type="time" />
+<input type="date />
 <main role="main">
 
 	<!-- Main jumbotron for a primary marketing message or call to action -->
